--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body{
     box-sizing: border-box;
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
 }
 
 .container{
@@ -29,6 +30,7 @@ body{
     color: #28334AFF;
     font-size: 2.75em;
     margin-bottom: 8px;
+    opacity: 1;
 }
 
 #description{
@@ -48,7 +50,7 @@ body{
 }
 
 #survey-form{
-    background: rgba(255, 127, 80, 0.637);
+    background: rgba(255, 127, 80, 0.837);
     padding: 2.5rem;
     align-items: center;
     margin-top: 2rem;
@@ -134,6 +136,7 @@ textarea{
     color: #28334AFF;
     border-radius: 0.25rem;
     font-size: 1.25em;
+    resize: vertical;
 }
 
 button{
@@ -146,5 +149,7 @@ button{
     text-transform: uppercase;
     color: white;
     cursor: pointer;
+    font-weight: 700;
+    font-size: 1em;
 }
 
